--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 				<ul class="sp-slider clearfix">
           <li>
             <!--  TODO CONTENT video cloudflare, & VIMEO
-					<li> <div style="position: relative;top:0;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
-            <iframe
-              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/61331f9cc90d0d8dcf316e1b4e2c7df6/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F61331f9cc90d0d8dcf316e1b4e2c7df6%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-              style="border: none; position: absolute; top: 2em; left: 0; height: 100%; width: 100%;"
-              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-              allowfullscreen="true"
-            ></iframe>
+					<div style="position: relative;top:0;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+          <iframe
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c3e20f5c19dade6ba2abec57f76529e9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc3e20f5c19dade6ba2abec57f76529e9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
            </div>
             -->
             <h1>Vimeo 1</h1>
@@ -139,6 +139,7 @@
       <a href="#" id="vids" class="vids"></a></li>
       </ul>
     </section>
+    
             <!--  TODO CONTENT -->
       <nav role="navigation" id="navA">
         <ul class="tabs">
@@ -210,7 +211,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/493f7f0160132e72df6aa3a484bb4b88/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F493f7f0160132e72df6aa3a484bb4b88%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c3e20f5c19dade6ba2abec57f76529e9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc3e20f5c19dade6ba2abec57f76529e9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
@@ -292,7 +293,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/493f7f0160132e72df6aa3a484bb4b88/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F493f7f0160132e72df6aa3a484bb4b88%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c3e20f5c19dade6ba2abec57f76529e9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc3e20f5c19dade6ba2abec57f76529e9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
