--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
 
 	<!-- TODO
-	      MASTER JUILLET PROJECT POESIES III
+	      MASTER JUILLET PROJECT
 	      Current project writing and production.
 	      Processing Digital Cinema Industry
 	      Interaction Design, Literature...
 	      -->
 	<!--  TODO CONTENT -->
 	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
-	<!--  TODO CONTENT  literature, cinéma, ilustration vector and animation CSS3 -->
+	<!--  TODO CONTENT  literature, cinéma, illustration vector and animation CSS3 -->
 	<!--  TODO CONTENT  color graphic experience background flim -->
   <!--  TODO CONTENT  digital Cinema (RED, ZEISS, COOKE, APPLE, NEUMANN, ZOOM, APUTURE) -->
 
@@ -79,11 +79,11 @@
             <!--  TODO CONTENT video cloudflare, & VIMEO
 					<div style="position: relative;top:0;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
           <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c3e20f5c19dade6ba2abec57f76529e9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc3e20f5c19dade6ba2abec57f76529e9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+         src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/0d6ca3dd6cedd8d0852479d149480bdd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F0d6ca3dd6cedd8d0852479d149480bdd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+         style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+         allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+         allowfullscreen="true"
+       ></iframe>
            </div>
             -->
             <h1>Vimeo 1</h1>
@@ -139,7 +139,7 @@
       <a href="#" id="vids" class="vids"></a></li>
       </ul>
     </section>
-    
+
             <!--  TODO CONTENT -->
       <nav role="navigation" id="navA">
         <ul class="tabs">
@@ -211,7 +211,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c3e20f5c19dade6ba2abec57f76529e9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc3e20f5c19dade6ba2abec57f76529e9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/0d6ca3dd6cedd8d0852479d149480bdd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F0d6ca3dd6cedd8d0852479d149480bdd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
@@ -293,11 +293,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c3e20f5c19dade6ba2abec57f76529e9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc3e20f5c19dade6ba2abec57f76529e9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+   src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/0d6ca3dd6cedd8d0852479d149480bdd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F0d6ca3dd6cedd8d0852479d149480bdd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+   style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+   allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+   allowfullscreen="true"
+ ></iframe>
  </div>
 
  <figure>
