--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<ul class="sp-slider clearfix">
           <li>
             <!--  TODO CONTENT video cloudflare, & VIMEO
-					<div style="position: relative;top:0;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+					<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
           <iframe
         src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d139c190de720f3de4fb7843ed5a631f/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd139c190de720f3de4fb7843ed5a631f%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
         style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -209,7 +209,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d139c190de720f3de4fb7843ed5a631f/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd139c190de720f3de4fb7843ed5a631f%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -236,7 +236,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
       src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/46d8d21205e66362958f67f37c666910/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F46d8d21205e66362958f67f37c666910%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
       style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -263,13 +263,13 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/46d8d21205e66362958f67f37c666910/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F46d8d21205e66362958f67f37c666910%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d27d17b85cbe8e378dd6b7459e2827f3/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd27d17b85cbe8e378dd6b7459e2827f3%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
 
 
@@ -291,7 +291,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d139c190de720f3de4fb7843ed5a631f/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd139c190de720f3de4fb7843ed5a631f%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
