--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/95f6680676408d3fe0e7c27a3f0b9049/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F95f6680676408d3fe0e7c27a3f0b9049%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5186576a3e35f5223a4af28c6d7192d7/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5186576a3e35f5223a4af28c6d7192d7%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
 
  <figure>
@@ -238,11 +238,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/779cd30eacd808a05832fedafbb1590a/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F779cd30eacd808a05832fedafbb1590a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/a4759bde099b8dcc866465647267bbd9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fa4759bde099b8dcc866465647267bbd9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
 
  <figure>
@@ -265,11 +265,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/779cd30eacd808a05832fedafbb1590a/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F779cd30eacd808a05832fedafbb1590a%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/a4759bde099b8dcc866465647267bbd9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fa4759bde099b8dcc866465647267bbd9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
 
 
@@ -293,11 +293,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/95f6680676408d3fe0e7c27a3f0b9049/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F95f6680676408d3fe0e7c27a3f0b9049%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5186576a3e35f5223a4af28c6d7192d7/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5186576a3e35f5223a4af28c6d7192d7%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
 
  <figure>
