--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if IE 7 ]> <html class="ie ie7"> <![endif]-->
-<!--[if IE 8 ]> <html class="ie ie8"> <![endif]-->
-<!--[if IE 9 ]> <html class="ie ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-
-<html  lang="fr_FR"> <!--<![endif]-->
+<html  lang="fr_FR">
   <head>
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
