--- a/index.html
+++ b/index.html
@@ -214,10 +214,15 @@
  </div>
 
  <figure>
-       <h1>MASTER JUILLET</h1>
+   <h1>MASTER JUILLET</h1>
+   <p  class="vign">PROJECT (DCP)
+   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4 K DCI R3D<br /> FIN 2024/25<br />
+ </p>
  </figure>
+
     <article>
       <h2>WIP</h2>
+
     </article>
   </article>
      </aside>
@@ -241,8 +246,12 @@
  </div>
 
  <figure>
-       <h1>MASTER JUILLET</h1>
+   <h1>MASTER JUILLET</h1>
+   <p  class="vign">PROJECT (DCP)
+   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4 K DCI R3D<br /> FIN 2024/25<br />
+ </p>
  </figure>
+
     <article>
       <h2>WIP</h2>
     </article>
@@ -269,8 +278,12 @@
 
 
  <figure>
-       <h1>MASTER JUILLET</h1>
+   <h1>MASTER JUILLET</h1>
+   <p  class="vign">PROJECT (DCP)
+   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4 K DCI R3D<br /> FIN 2024/25<br />
+ </p>
  </figure>
+
     <article>
       <h2>WIP</h2>
     </article>
@@ -296,8 +309,12 @@
  </div>
 
  <figure>
-       <h1>MASTER JUILLET</h1>
+   <h1>MASTER JUILLET</h1>
+   <p  class="vign">PROJECT (DCP)
+   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4 K DCI R3D<br /> FIN 2024/25<br />
+ </p>
  </figure>
+
     <article>
       <h2>WIP</h2>
     </article>
