--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
 	<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-iphone.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-ipad.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-ipad.png">
 	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="ico/apple-icon-76x76.png">
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-iphone-retina.png">
 	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="ico/apple-icon-120x120.png">
@@ -237,7 +237,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
       style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
       allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
       allowfullscreen="true"
@@ -268,11 +268,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
  </div>
 
 
@@ -300,11 +300,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/df3933b9d3d6ae5f902ea7256a117974/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fdf3933b9d3d6ae5f902ea7256a117974%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
  </div>
 
  <figure>
