--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 <section id="s-text" class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-EC.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-ECC.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
@@ -237,11 +237,11 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/378e40fdb1c2292aa73edb2fa8d7992d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F378e40fdb1c2292aa73edb2fa8d7992d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
 
  <figure>
@@ -292,7 +292,7 @@
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-OB.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-OBN.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
