--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 	<!--  TODO CONTENT  color graphic experience background flim -->
   <!--  TODO CONTENT  digital Cinema (RED, ZEISS, COOKE, APPLE, NEUMANN, ZOOM, APUTURE) -->
 
+  <!-- TODO
+	      MASTER JUILLET PROJECT
+	      BDD =>  PostgreSQL, SQLite...
+	      RUBY ON RAILS OR PYTHON
+        JS, ANGULAR... - APPS...
+	      -->
+
 <body class="chain chain-down full-width-content" role="document">
 	<section id="block-video">
 		<aside id="strip">
@@ -203,7 +210,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div id="ifsign">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/df3933b9d3d6ae5f902ea7256a117974/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fdf3933b9d3d6ae5f902ea7256a117974%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -235,7 +242,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div id="iftext">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/378e40fdb1c2292aa73edb2fa8d7992d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F378e40fdb1c2292aa73edb2fa8d7992d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -266,7 +273,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div id="ifliter">
   <iframe
      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -298,7 +305,7 @@
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div style="float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+<div id="ifvideo">
   <iframe
      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/d4f5f0e683924d617e72d7b775f23be2/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fd4f5f0e683924d617e72d7b775f23be2%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
