--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	      MASTER JUILLET PROJECT
 	      BDD =>  PostgreSQL, SQLite...
 	      RUBY ON RAILS OR PYTHON
-        JS, ANGULAR... - APPS...
+	      JS, ANGULAR... - APPS...
 	      -->
 
 <body class="chain chain-down full-width-content" role="document">
@@ -130,19 +130,16 @@
       </ul>
 
       <!--  TODO CONTENT SECOND NAV-->
-      <section role="navigation">
-      <ul>
-      <li id="1"><a href="#" id="txt" class="txt"></a>
-      <a href="#" id="texts" class="texts"></a></li>
-      <li id="2"><a href="#" id="liter" class="liter"></a>
-      <a href="#" id="liters" class="liters"></a></li>
-      <li id="3"><a href="#" id="vid" class="vid"></a>
-      <a href="#" id="vids" class="vids"></a></li>
-      </ul>
-    </section>
+      <nav role="navigation" id="nav">
+        <ul>
+        <li id="1"><a href="#" id="txt" class="txt"></a>
+        <a href="#" id="texts" class="texts"></a></li>
+        <li id="2"><a href="#" id="liter" class="liter"></a>
+        <a href="#" id="liters" class="liters"></a></li>
+        <li id="3"><a href="#" id="vid" class="vid"></a>
+        <a href="#" id="vids" class="vids"></a></li>
+        </ul>
 
-            <!--  TODO CONTENT -->
-      <nav role="navigation" id="navA">
         <ul class="tabs">
           <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
             <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
