--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ x <iframe
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-OBNR.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-OBN.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
