--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ x <iframe
 
 <section id="s-text" class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-ECC.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-EC.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
@@ -240,11 +240,11 @@ x <iframe
   <!--  TODO CONTENT video cloudflare-->
 <div id="iftext">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c172c6fa55d4d69722af7b704d7e0afc/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc172c6fa55d4d69722af7b704d7e0afc%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/6b3d9d5cd748efdd90fd34f8c1432768/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F6b3d9d5cd748efdd90fd34f8c1432768%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
  </div>
 
  <figure>
