--- a/index.html
+++ b/index.html
@@ -200,12 +200,17 @@ x <iframe
 </section>
 
 <section id="s-sign">
-<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-      <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
+<aside class="page">  <!--  TODO CONTENT<p class="vign">DIM</p>-->
+
+  <article>
+    <h2>WIP</h2>
+  </article>
+<div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+      <!-- <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
 <aside class="page">
 
-  <!--  TODO CONTENT video cloudflare-->
+TODO CONTENT video cloudflare
 <div id="ifsign">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/a9ae96405479819d224a6acda2c3baaa/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fa9ae96405479819d224a6acda2c3baaa%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
@@ -227,6 +232,7 @@ x <iframe
 
     </article>
   </article>
+  -->
      </aside>
 </section>
 
@@ -249,7 +255,7 @@ x <iframe
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign">PROJECT (DCP)
+   <p class="vign">PROJECT (DCP)
    <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D<br /> FIN 2024/25<br />
  </p>
  </figure>
@@ -295,7 +301,7 @@ x <iframe
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-OB.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
