--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ TODO CONTENT video cloudflare
 
 <section id="s-text" class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-EC.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
@@ -298,7 +298,7 @@ TODO CONTENT video cloudflare
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-    <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-OBNR.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
