--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css">
-	<link href="css/print.css" media="print" rel="stylesheet" type="text/css">
+	<!--  <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css">-->
+  <!--  <link href="css/print.css" media="print" rel="stylesheet" type="text/css">-->
 
 	<script src="scripts/master_functions.js" type="text/javascript"></script>
+  <script src="scripts/modernizr.custom.js" type="text/javascript"></script>
 	<script src="scripts/retina.min.js" type="text/javascript"></script>
 </head>
 
@@ -243,7 +245,7 @@ TODO CONTENT video cloudflare
 <aside class="page">
 
   <!--  TODO CONTENT video cloudflare-->
-<div id="iftext">
+<div  id="iftext">
   <iframe
      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/687728c0ddae26acdba4b54c59d19c23/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F687728c0ddae26acdba4b54c59d19c23%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
@@ -303,7 +305,7 @@ TODO CONTENT video cloudflare
 
 <aside class="page">
 
-  <!--  TODO CONTENT video cloudflare-->
+cTODO CONTENT video cloudflare-->
 <div id="ifvideo">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/34b3f5478f039a98702ab1b244af4273/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F34b3f5478f039a98702ab1b244af4273%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
@@ -326,11 +328,13 @@ TODO CONTENT video cloudflare
  </aside>
 </section>
 
+ <!-- <footer></footer> -->
+
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
 
-<!--
+ <!--
   <script src="https://embed.cloudflarestream.com/embed/sdk.latest.js"></script>
 
 <script>
@@ -344,7 +348,7 @@ TODO CONTENT video cloudflare
     player.play();
   });
 </script>
--->
+ -->
 
 </body>
 </html>
