--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             <a href="#s-video" id="vids" class="vids">Dire</a></li>
         </ul>
       </nav>
-      <figure>
-          <p class="inners">Écriture et production du projet en cours  :<a class="inners" href="https://f.io/mOtZOgK6" rel="external">f.io/mOtZOgK6</a></p>
+      <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
+          <p class="inners"><!--  Écriture et production du projet en cours  :--><a class="inners" href="https://f.io/mOtZOgK6" rel="external">f.io/mOtZOgK6</a></p>
         </figure>
 		</header>
 
@@ -238,7 +238,7 @@ TODO CONTENT video cloudflare
 </section>
 
 <section id="s-text" class="tab_content">
-  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
     <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   </aside>
 
@@ -268,7 +268,7 @@ TODO CONTENT video cloudflare
 </section>
 
 <section id="s-liter"  class="tab_content">
-  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  <aside class="page"><!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
 <div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   </aside>
 
@@ -299,7 +299,7 @@ TODO CONTENT video cloudflare
 </section>
 
 <section id="s-video"  class="tab_content">
-  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  <aside class="page"><!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
     <div><img class="tempo" src="images/MJ-HLG-OBNR.jpg" alt="Sun"></div>
   </aside>
 
