--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </ul>
       </nav>
       <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
-          <p class="inners"><!--  Écriture et production du projet en cours  :--><a class="inners" href="https://f.io/mOtZOgK6" rel="external">f.io/mOtZOgK6</a></p>
+          <p class="inners">Projets en cours  :<a class="inners" href="https://f.io/mOtZOgK6" rel="external">f.io/mOtZOgK6</a></p>
         </figure>
 		</header>
 
