--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <aside class="page">  <!--  TODO CONTENT<p class="vign">DIM</p>-->
 
   <article>
-    <h2>WIP</h2>
+    <h2>WIP 2025</h2>
   </article>
 <div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
       <!-- <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
@@ -239,6 +239,10 @@ TODO CONTENT video cloudflare
 
 <section id="s-text" class="tab_content">
   <aside class="page">  <!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+    <article>
+      <h2>WIP 2025</h2>
+    </article>
+
     <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   </aside>
 
@@ -262,13 +266,17 @@ TODO CONTENT video cloudflare
  </figure>
 
     <article>
-      <h2>WIP</h2>
+      <h2>WIP 2025</h2>
     </article>
  </aside>
 </section>
 
 <section id="s-liter"  class="tab_content">
   <aside class="page"><!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+    <article>
+      <h2>WIP 2025</h2>
+    </article>
+
 <div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   </aside>
 
@@ -293,19 +301,23 @@ TODO CONTENT video cloudflare
  </figure>
 
     <article>
-      <h2>WIP</h2>
+       <h2>WIP 2025</h2>
     </article>
  </aside>
 </section>
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><!--  TODO CONTENT RESPONSIVE --><div><b></b></div>
+    <article>
+      <h2>WIP 2025</h2>
+    </article>
+
     <div><img class="tempo" src="images/MJ-HLG-OBNR.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
 
-cTODO CONTENT video cloudflare-->
+ <!-- TODO CONTENT video cloudflare-->
 <div id="ifvideo">
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/34b3f5478f039a98702ab1b244af4273/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F34b3f5478f039a98702ab1b244af4273%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
@@ -323,7 +335,7 @@ cTODO CONTENT video cloudflare-->
  </figure>
 
     <article>
-      <h2>WIP</h2>
+        <h2>WIP 2025</h2>
     </article>
  </aside>
 </section>
