--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 
 <section class="head" id="rules">
 		<header role="banner">
+
+
 			<ul id="video" class="request">
 				<li><a id="vim" class="vim">
 					<svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
@@ -125,14 +127,19 @@
 				<li><a id="vims" class="vims">Hide this content</a></li>
 			</ul>
 
+
+
 			<ul id="think" class="request">
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
       </ul>
 
+
+
       <!--  TODO CONTENT SECOND NAV-->
       <nav role="navigation" id="nav">
-        <ul>
+
+        <ul class="tabs">
         <li id="1"><a href="#" id="txt" class="txt"></a>
         <a href="#" id="texts" class="texts"></a></li>
         <li id="2"><a href="#" id="liter" class="liter"></a>
@@ -142,8 +149,7 @@
         </ul>
 
         <ul class="tabs">
-          <!--
-          <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
+          <li id="sign"><a style="display:none" href="#s-sign" id="signs"class="signs">
             <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
              x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
@@ -158,7 +164,7 @@
             <a href="#s-sign" id="signers" class="signers">
               <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-               x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
+               x="0px" y="0px"  width="22.095px"  height="15.503px"  viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
                xml:space="preserve">
                 <g>
                   <g>
@@ -167,7 +173,6 @@
                 </g>
               </svg>
           </a></li>
-          -->
         <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Écriture</a>
             <a href="#content" id="texts" class="texts">Écriture</a></li>
           <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Tournage</a>
@@ -175,7 +180,10 @@
           <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Dire</a>
             <a href="#s-video" id="vids" class="vids">Dire</a></li>
         </ul>
+
       </nav>
+
+
       <figure><!--  TODO CONTENT<p class="vign">DIM</p>-->
           <p class="inners">Projets en cours  :<a class="inners" href="https://f.io/mOtZOgK6" rel="external">f.io/mOtZOgK6</a></p>
         </figure>
