--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
       <nav role="navigation" id="nav">
 
         <ul class="tabs">
-        <li id="1"><a href="#" id="txt" class="txt"></a>
-        <a href="#" id="texts" class="texts"></a></li>
-        <li id="2"><a href="#" id="liter" class="liter"></a>
-        <a href="#" id="liters" class="liters"></a></li>
-        <li id="3"><a href="#" id="vid" class="vid"></a>
-        <a href="#" id="vids" class="vids"></a></li>
+        <li id="1"><a href="#" id="txt"></a>
+        <a href="#" id="texts"></a></li>
+        <li id="2"><a href="#" id="liter"></a>
+        <a href="#" id="liters"></a></li>
+        <li id="3"><a href="#" id="vid"></a>
+        <a href="#" id="vids"></a></li>
         </ul>
 
         <ul class="tabs">
@@ -326,7 +326,7 @@ TODO CONTENT video cloudflare
     </article>
 -->
 
-    <div><img class="tempo" src="images/MJ-HLG-OBNR.jpg" alt="Sun"></div>
+    <div><img class="tempo" src="images/MJ-HLG-NR.jpg" alt="Sun"></div>
   </aside>
 
 <aside class="page">
