--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css">
+  	<link href="css/video-js.css" media="all" rel="stylesheet" type="text/css">
 	<!--  <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css">-->
   <!--  <link href="css/print.css" media="print" rel="stylesheet" type="text/css">-->
 
@@ -261,18 +262,19 @@ TODO CONTENT video cloudflare
 
   <!--  TODO CONTENT video cloudflare-->
 <div  id="iftext">
-  <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/687728c0ddae26acdba4b54c59d19c23/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F687728c0ddae26acdba4b54c59d19c23%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
- </div>
+    <iframe
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/9907580d67c925be90d3a4db65797ca1/iframe?preload=true&loop=true&poster=https://share.icloud.com/photos/01bpa7jBT2Km67kbg_9QNsQxw&startTime=1s"
+      poster="https://share.icloud.com/photos/01bpa7jBT2Km67kbg_9QNsQxw"
+      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+      allowfullscreen="true"
+    ></iframe>
+  </div>
 
  <figure>
    <h1>MASTER JUILLET</h1>
    <p class="vign">PROJECT (DCP)
-   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D<br /> FIN 2024/25<br />
+   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br />
  </p>
  </figure>
 
@@ -359,7 +361,7 @@ TODO CONTENT video cloudflare
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
-
+	<script src="scripts/video.js" type="text/javascript"></script>
  <!--
   <script src="https://embed.cloudflarestream.com/embed/sdk.latest.js"></script>
 
