--- a/index.html
+++ b/index.html
@@ -262,13 +262,12 @@ TODO CONTENT video cloudflare
 
   <!--  TODO CONTENT video cloudflare-->
 <div  id="iftext">
-    <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/9907580d67c925be90d3a4db65797ca1/iframe?preload=true&loop=true&poster=https://share.icloud.com/photos/01bpa7jBT2Km67kbg_9QNsQxw&startTime=1s"
-      poster="https://share.icloud.com/photos/01bpa7jBT2Km67kbg_9QNsQxw"
-      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+  <iframe
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/34b3f5478f039a98702ab1b244af4273/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F34b3f5478f039a98702ab1b244af4273%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
   </div>
 
  <figure>
@@ -362,7 +361,7 @@ TODO CONTENT video cloudflare
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
 	<script src="scripts/video.js" type="text/javascript"></script>
- <!--
+
   <script src="https://embed.cloudflarestream.com/embed/sdk.latest.js"></script>
 
 <script>
@@ -376,7 +375,7 @@ TODO CONTENT video cloudflare
     player.play();
   });
 </script>
- -->
+
 
 </body>
 </html>
