--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
 	<link href="css/typography.css" media="all" rel="stylesheet" type="text/css">
-  	<link href="css/video-js.css" media="all" rel="stylesheet" type="text/css">
+  <link href="sass-cache/1495a56196e8a4991835c98fc975beda4799ad30/_utilities.scssc" media="all">
+
 	<!--  <link href="css/screen.css" media="screen" rel="stylesheet" type="text/css">-->
   <!--  <link href="css/print.css" media="print" rel="stylesheet" type="text/css">-->
 
@@ -272,8 +273,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p class="vign">PROJECT (DCP)
-   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br />
+   <p  class="vign"><a href="svg_profile/DEAL STANDING-1000A-01V.svg" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
@@ -305,11 +305,9 @@ TODO CONTENT video cloudflare
   ></iframe>
  </div>
 
-
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign">PROJECT (DCP)
-   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D<br /> FIN 2024/25<br />
+   <p  class="vign"><a href="svg_profile/DEAL STANDING-1000A-01V.svg" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
@@ -344,8 +342,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign">PROJECT (DCP)
-   <br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D<br /> FIN 2024/25<br />
+   <p  class="vign"><a href="svg_profile/DEAL STANDING-1000A-01V.svg" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
