--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/DEAL STANDING-1000A-01V.svg" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="svg_profile/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
@@ -307,7 +307,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/DEAL STANDING-1000A-01V.svg" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="svg_profile/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
@@ -342,7 +342,7 @@ TODO CONTENT video cloudflare
 
  <figure>
    <h1>MASTER JUILLET</h1>
-   <p  class="vign"><a href="svg_profile/DEAL STANDING-1000A-01V.svg" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
+   <p  class="vign"><a href="svg_profile/usual_signs.html" rel="external">PROJECT</a> (DCP)<br />ESSAI<br />CINEMATOGRAPHIQUE<br />4K DCI R3D <br /> FIN 2024/25<br /></p>
  </p>
  </figure>
 
